# fake-book-index

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: docker-publish.yml
fake_book_index/: bot.py
src/fake_book_index/: __init__.py  bot.py
