[tool.poetry]
name = "fake-book-index"
version = "0.1.0"
description = "A Telegram bot that indexes all possible jazz sheet music source"
authors = ["Giacomo Gattoni <ggattoni3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
black = "^22.12.0"
aiohttp = "^3.8.3"
python-telegram-bot = "^20.0"
lxml = "^4.9.2"
emoji = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
