[project]
name = "fake-book-index"
version = "0.1.0"
description = "A Telegram bot that indexes all possible jazz sheet music source"
readme = "README.md"
authors = [
    { name = "ggattoni", email = "ggattoni3@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "beautifulsoup4>=4.13.3",
    "emoji>=2.14.1",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
]

[project.scripts]
fake-book-index = "fake_book_index.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 120
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ERA", "PLR0913", "T201", "B008", "D100", "INP001", "TD", "FIX002"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
